--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@types/react": "~18.2.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.2.1",
+    "jest-expo": "~49.0.0"
   },
   "private": true
 }
