Add mock data for weather API response and unit tests for getCityByNameService

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "preset": "jest-expo",
+  "testPathIgnorePatterns": ["<rootDir>/__tests__/mocks/"],
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
