--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
+    "jest-transformer-svg": "^2.1.0",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^5.1.3"
   },
