--- a/jest.config.json
+++ b/jest.config.json
@@ -1,13 +1,19 @@
 {
   "preset": "jest-expo",
-  "testPathIgnorePatterns": ["<rootDir>/__tests__/mocks/"],
+  "testPathIgnorePatterns": [
+    "<rootDir>/__tests__/mocks",
+    "<rootDir>/__tests__/utils"
+  ],
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
     ]
   },
-  "setupFiles": ["./__tests__/mocks/libs/async-storage.js"],
+  "setupFiles": [
+    "./__tests__/mocks/libs/async-storage.js",
+    "./__tests__/mocks/libs/react-native-safe-area-context.js"
+  ],
   "transform": {
     "^.+\\.jsx?$": "babel-jest",
     "^.+\\.svg$": "jest-transformer-svg"
