--- a/jest.config.json
+++ b/jest.config.json
@@ -17,5 +17,13 @@
   "transform": {
     "^.+\\.jsx?$": "babel-jest",
     "^.+\\.svg$": "jest-transformer-svg"
-  }
+  },
+  "collectCoverageFrom": [".src/**/*.{ts.tsx}", "!./src/**/styles.ts"],
+  "coveragePathIgnorePatterns": [
+    "./src/@types",
+    "./src/styles",
+    "./src/libs/days",
+    "./__tests__/coverage"
+  ],
+  "coverageDirectory": "./__tests__/coverage"
 }
