Update Jest configuration to enable test bail, modify test path ignores, and add unit tests for Dashboard screen to verify city weather display and selection functionality.

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,15 +1,14 @@
 {
   "preset": "jest-expo",
-  "testPathIgnorePatterns": [
-    "<rootDir>/__tests__/mocks",
-    "<rootDir>/__tests__/utils"
+  "bail": true,
+  "transformIgnorePatterns": [
+    "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
   ],
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
-    ]
-  },
+  "testPathIgnorePatterns": [
+    "./__tests__/mocks",
+    "./__tests__/utils",
+    "./__tests__/coverage"
+  ],
   "setupFiles": [
     "./__tests__/mocks/libs/async-storage.js",
     "./__tests__/mocks/libs/react-native-safe-area-context.js"
