Enhance EAS configuration in eas.json with autoIncrement settings for Android and production builds, and introduce a new CI/CD workflow for automated testing and deployment using GitHub Actions, replacing the previous CI workflow.

--- a/eas.json
+++ b/eas.json
@@ -5,22 +5,28 @@
   },
   "build": {
     "preview": {
+      "autoIncrement": true,
       "android": {
-        "distribution": "internal"
+        "distribution": "internal",
+        "autoIncrement": "versionCode"
       },
       "ios": {
         "simulator": true
-      },
-      "env": {
-        "EXPO_PUBLIC_WEATHER_APP_ID": ""
       }
     },
     "production": {
+      "autoIncrement": true,
       "android": {
-        "distribution": "internal"
-      },
-      "env": {
-        "EXPO_PUBLIC_WEATHER_APP_ID": ""
+        "autoIncrement": "versionCode"
+      }
+    }
+  },
+  "submit": {
+    "preview": {
+      "android": {
+        "track": "internal",
+        "serviceAccountKeyPath": "./google-services.json",
+        "releaseStatus": "draft"
       }
     }
   }
